--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,34 @@
-# .github/workflows/deploy.yml
-name: Deploy to GitHub Pages
+# .github/workflows/deploy.yml - ACTUALIZA ESTO:
 
+name: Deploy to GitHub Pages
 on:
   push:
-    branches: [ main ]
-
+    branches: [main]
+permissions:
+  contents: write
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         
       - name: Build
         run: npm run build
+        env:
+          VITE_API_URL: https://checkinapi-5cc3a2116a1c.herokuapp.com/api
         
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          cname: www.checksin.app  # <- AGREGA ESTA LÍNEA
