--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,23 @@
-name: Deploy to GitHub Pages
+# .github/workflows/deploy.yml - REEMPLAZA TODO:
+
+name: Deploy
 on:
   push:
     branches: [main]
 permissions:
   contents: write
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
-      - name: Install
-        run: npm install
-        
-      - name: Build with correct base
-        run: |
-          export NODE_ENV=production
-          npm run build
-        env:
-          VITE_API_URL: https://checkinapi-5cc3a2116a1c.herokuapp.com/api
-        
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - run: npm install
+      - run: npm run build
+      - run: echo "www.checksin.app" > dist/CNAME
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          cname: www.checksin.app
